--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,9 +1,51 @@
 body {
-    margin: 5;
-    font-family: arial;
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 5000px;
+    padding: 40px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 h1 {
-    text-align: center;
-    margin: 0; 
+    color: #3498db;
+}
+
+.button-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 40px;
+}
+
+form {
+    margin-bottom: 10px;
+}
+
+button {
+    font-family: 'Arial', sans-serif;
+    background-color: #3498db;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    white-space: nowrap;
+}
+
+button:hover {
+    background-color: #2980b9;
+}
+
+.button-container button {
+    margin: 0 20px; /* Adjust the margin value to increase or decrease spacing */
 }
