--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
                 <form action="/songs_extract" method="get"><button type="submit">Go to songs extract</button></form>
                 <form action="/songs" method="get"><button type="submit">List all songs</button></form>
                 <form action="/pie" method="get"><button type="submit">Genre Analysis</button></form>
+                <form action="/bar" method="get"><button type="submit">Playlist Analysis</button></form>
             </div>
         </div>
     </div>
