--- a/templates/bar_chart.html
+++ b/templates/bar_chart.html
@@ -10,7 +10,8 @@
     <script src="/static/js/bar.js"></script>
 </head>
 <body>
-    <h1>Dive into the Groovy Galaxy of Playlist Characteristic Distribution!</h1>
+    <h1>Dive into the Groovy Galaxy of Playlist Attribute Distribution!</h1>
+    <p> Embark on an interactive journey through the sonic attributes of each playlist genre. From danceability to energy, discover what makes your playlists pulse with life. Tune in and explore the unique characteristics that shape your musical experience! 🚀</p>
     <div id="bar-container">
         <!-- Add a dropdown menu for categories -->
         <label for="categoryDropdown">Select Category:</label>
@@ -25,15 +26,9 @@
             <option value="valence">Valence</option>
             <option value="tempo">Tempo</option>
         </select>
+        
+        <!-- Single div for the chart -->
+        <div id="chartDiv"></div>
     </div>
-    <div id="danceabilityBarPlot"></div>
-    <div id="energyBarPlot"></div>
-    <div id="loudnessBarPlot"></div>
-    <div id="speechinessBarPlot"></div>
-    <div id="acousticness"></div>
-    <div id="instrumentalness"></div>
-    <div id="livenessBarPlot"></div>
-    <div id="valenceBarPlot"></div>
-    <div id="tempoBarPlot"></div>
 </body>
 </html>
