--- a/templates/pie.html
+++ b/templates/pie.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" type="text/css" href="static/css/main.css">
     <title>Project-3</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="/static/js/visualisation.js"></script>
+    <script src="/static/js/pie.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
+    <h1>Discover the Magic of Playlist Genres</h1>
+    <p>Dive into the vibrant world of music genres! Explore the distribution of your favorite playlist genres 🌈🎶</p>
     <div id="pieplot">
     </div>
-    <script src="/static/js/visualisation.js"></script>
+    <script src="/static/js/pie.js"></script>
 </body>
 </html>
