--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
             <h1>Interactive Music Dashboard</h1>
             <div class="button-container">
                 <form action="/search" method="get"><button type="submit">Search</button></form>
+                <form action="/songs_extract" method="get"><button type="submit">Songs Extract</button></form>
                 <form action="/songs" method="get"><button type="submit">List all songs</button></form>
                 <form action="/pie" method="get"><button type="submit">Playlist Genre Explorer</button></form>
                 <form action="/bar" method="get"><button type="submit">Playlist Attribute Explorer</button></form>
