--- a/templates/top_100.html
+++ b/templates/top_100.html
@@ -9,7 +9,8 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
-
+    <h1> Chart-Toppers Unleashed: Top 100 Playlist</h1>
+    <p>"Dive into the beats that define the moment! Our Top 100 Playlist is a curated collection of the hottest tracks, blending genres and artists that are striking a chord with listeners worldwide. From the infectious rhythms to the soulful ballads, this chart is your gateway to the songs making waves. </p>
     <!-- Add input and button for user selection -->
     <label for="songCount">Select number of songs:</label>
     <input type="number" id="songCount" min="1" max="100" value="20">
