--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
         <div class="container">
             <h1>Interactive Music Dashboard</h1>
             <div class="button-container">
+                <!--- Buttons for all the API routes-->
                 <form action="/search" method="get"><button type="submit">Search</button></form>
                 <form action="/songs_extract" method="get"><button type="submit">Songs Extract</button></form>
                 <form action="/songs" method="get"><button type="submit">List all songs</button></form>
@@ -20,7 +21,7 @@
                 <form action="/bar" method="get"><button type="submit">Playlist Attribute Explorer</button></form>
                 <form action="/top_100" method="get"><button type="submit">Top 100</button></form>
                 <form action="/song_length" method="get"><button type="submit">Song Length Over The Years</button></form>
-                <form action="/attribute_analysis" method="get"><button type="submit">Attribute Corellation Explorer</button></form>
+                <form action="/attribute_analysis" method="get"><button type="submit">Attribute Correlation Explorer</button></form>
                 
             </div>
         </div>
