Comments added to song_length

--- a/templates/song_length.html
+++ b/templates/song_length.html
@@ -56,7 +56,7 @@
                 },
             });
 
-            // Append the above plot to the HTML #myplot element assigned to the div variable
+            // Append the above plot to the HTML #myplot element which is assigned to the div variable
 
             const div = document.querySelector("#myplot");
             div.append(plot);
